fixed overlap issue with list

--- a/client/src/stylesheets/ratings_review/ratingsReview.css
+++ b/client/src/stylesheets/ratings_review/ratingsReview.css
@@ -4,4 +4,5 @@
   width: 100vw;
   justify-content: center;
   align-items: flex-start;
+  margin-top: 50px;
 }
