--- a/client/src/stylesheets/ratings_review/reviewList.css
+++ b/client/src/stylesheets/ratings_review/reviewList.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 55%;
   height: 80%;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   margin-top: 30px;
 }
@@ -14,7 +14,8 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   overflow: auto;
   overflow-x: hidden;
 }
@@ -27,7 +28,7 @@
   display: flex;
   font-size: 18px;
   width: 100%;
-  min-height: 300px;
+  height: auto;
   margin-bottom: 30px;
 }
 
